# cpu2

./: README.md  build.py
.github/workflows/: build.yml  python-package-conda.yml
github/workflows/: build.yml
native/: CMakeLists.txt  example.cpp
template/: customize.sh  module.prop  zn_modules.txt
